--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
   http: ^1.1.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +55,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+
+  assets:
+    - lib/image/me.jpg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
